Cleanup: use stream.toList().