@@ -47,7 +47,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import de.dennisguse.opentracks.content.data.TestDataUtil;
 import de.dennisguse.opentracks.content.data.TestSensorDataUtil;
@@ -860,7 +859,7 @@ public class CustomContentProviderUtilsTest {
 
         List<TrackPoint.Id> trackpointIds = track.second.stream()
                 .map(it -> ContentUris.parseId(contentProviderUtils.insertTrackPoint(it, track.first.getId())))
-                .map(TrackPoint.Id::new).collect(Collectors.toList());
+                .map(TrackPoint.Id::new).toList();
 
         // when
         try (Cursor cursor = contentProviderUtils.getTrackPointCursor(trackId, trackpointIds.get(8))) {
@@ -878,7 +877,7 @@ public class CustomContentProviderUtilsTest {
 
         List<TrackPoint.Id> trackpointIds = track.second.stream()
                 .map(it -> ContentUris.parseId(contentProviderUtils.insertTrackPoint(it, track.first.getId())))
-                .map(TrackPoint.Id::new).collect(Collectors.toList());
+                .map(TrackPoint.Id::new).toList();
 
         TrackPoint.Id startTrackPointId = trackpointIds.get(0);
 
