@@ -7,7 +7,6 @@ import androidx.annotation.NonNull;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import de.dennisguse.opentracks.R;
 
@@ -123,7 +122,7 @@ public enum ActivityType {
         return Arrays.stream(values())
                 .map(ActivityType::getLocalizedStringId)
                 .map(context::getString)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @NonNull
