@@ -724,7 +724,7 @@ public class PreferencesUtils {
                 R.array.stats_custom_layout_fields_default_value_16,
                 R.array.stats_custom_layout_fields_default_value_17,
                 R.array.stats_custom_layout_fields_default_value_18
-        ).map(id -> resources.obtainTypedArray(id)).collect(Collectors.toList());
+        ).map(id -> resources.obtainTypedArray(id)).toList();
     }
 
     @SuppressLint("ResourceType")
@@ -799,7 +799,7 @@ public class PreferencesUtils {
     }
 
     public static List<String> getAllCustomLayoutNames() {
-        return getAllCustomLayouts().stream().map(RecordingLayout::getName).collect(Collectors.toList());
+        return getAllCustomLayouts().stream().map(RecordingLayout::getName).toList();
     }
 
     public static void resetCustomLayoutPreferences() {
